--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-wrap {
+  word-wrap: break-word;
+}
+
+.bot-army {
+  overflow-x: scroll;
+  min-height: 300px;
+  max-width: 100%;
+}
+
+.ui.grid > .row.bot-army-row {
+  flex-wrap: nowrap;
+  min-height: 100%;
+}
+
+.ui.grid {
+  padding: 0px 20px;
+}
+.bot-card {
+  display: inline-block;
+  margin: 10px;
+  background-color: black;
+  border-radius: 10px;
+  padding: 20px;
+  width: 200px; 
+}
+
+.bot-card .image {
+  text-align: center;
+}
+
+.bot-card .image img {
+  width: 100px; 
+  border-radius: 50%;
+}
+
+.bot-card .content {
+  margin-top: 10px;
+}
+
+.bot-card .content .description-box {
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.bot-card .content .description-box p {
+  margin: 0;
+}
+
+
+.bot-army {
+  display: flex;
+  justify-content: center;
+}
+
+.bot-army .bot-army-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
